# grafeo

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  bench-thresholds.toml  deny.toml  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml  codspeed.yml  release.yml
crates/bindings/c/: grafeo.h
crates/bindings/go/: grafeo_c.def  stream.go  stream_test.go
crates/bindings/node/: index.d.ts  index.js
crates/bindings/wasm/: Cargo.toml
crates/grafeo-adapters/tests/: gql_fuzz_test.rs
crates/grafeo-cli/src/: repl.rs
crates/grafeo-common/: Cargo.toml
crates/grafeo-common/benches/: arena_bench.rs
crates/grafeo-common/src/: encryption.rs  mvcc.rs
crates/grafeo-core/: Cargo.toml
crates/grafeo-core/benches/: index_bench.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/benches/: memory_bench.rs  query_bench.rs  regression_bench.rs  serialization_bench.rs
crates/grafeo-engine/src/: cdc.rs  config.rs  lib.rs  procedures.rs
crates/grafeo-engine/tests/: agent_memory_migration.rs  benchmark_comparison.rs  cdc_session_mutations.rs  compact_store_integration.rs  compact_store_tiered_spill.rs  concurrent_sessions.rs  coverage_aggregates.rs  coverage_memory.rs  coverage_patterns.rs  coverage_project.rs  coverage_session.rs  database_api.rs  graph_benchmarks.rs  (+36 more)
crates/grafeo-spec-tests/: Cargo.toml  build.rs
crates/grafeo-spec-tests/src/: lib.rs
docs/: roadmap.md
docs/user-guide/: catalog-hierarchy.md  compact-store.md
examples/rust/: algorithms.rs
scripts/: build-wasm-all.ps1  build-wasm-all.sh  build-wasm.sh
(+217 files in other folders)
