[package]
name = "grafeo-spec-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Declarative .gtest spec tests for Grafeo"
publish = false

[features]
default = ["gql", "cypher", "gremlin", "graphql", "sparql", "sql-pgq", "triple-store", "vector-index", "text-index", "algos"]
gql = []
cypher = []
gremlin = []
graphql = []
sparql = []
sql-pgq = []
triple-store = []
rdf = ["triple-store"]  # Deprecated: use triple-store
vector-index = []
text-index = []
algos = []
shacl = ["triple-store", "grafeo-engine/shacl"]

[dependencies]
grafeo-engine = { workspace = true, features = ["embedded", "languages", "triple-store", "wal"] }
grafeo-common = { workspace = true }
md5 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
# No serde_yaml: hand-written parser for the simple YAML subset

[lints]
workspace = true
